# GI

./: .gitignore  HW7.ipynb  HW_3.ipynb  Hw1.ipynb  main.py  pyproject.toml
HW_02/: create_table.py  delete.py  seed.py  select.py  update.py
HW_021/: test.py
HW_31/: create_db.py  main.py
module_3/Module 3_1/: main.py  scraping.py
module_3/Scrapy/test_spyder/test_spyder/spiders/: authors.py
module_3/Test_scrap_minfin/: minfin.py
