[tool.poetry]
name = "gi"
version = "0.1.0"
description = ""
authors = ["Roman <Sudorenkoroma@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^1.26.4"
pymongo = "4.6.2"
requests = "^2.31.0"
lxml = "^5.1.1"
beautifulsoup4 = "^4.12.3"
sqlalchemy = "^2.0.29"
scrapy = "^2.11.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
